Traducido archivo c-api/float.po

--- a/c-api/float.po
+++ b/c-api/float.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-01 20:11+0200\n"
+"PO-Revision-Date: 2022-12-01 10:01+0400\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/float.rst:6
 msgid "Floating Point Objects"
@@ -62,8 +63,8 @@ msgid ""
 "Create a :c:type:`PyFloatObject` object based on the string value in *str*, "
 "or ``NULL`` on failure."
 msgstr ""
-"Crea un objeto :c:type:`PyFloatObject` en función del valor de cadena de "
-"caracteres en *str* o ``NULL`` en caso de error."
+"Crea un objeto :c:type:`PyFloatObject` basado en la cadena de caracteres en "
+"*str*, o ``NULL`` en caso de error."
 
 #: ../Doc/c-api/float.rst:42
 msgid ""
@@ -73,7 +74,6 @@ msgstr ""
 "de error."
 
 #: ../Doc/c-api/float.rst:47
-#, fuzzy
 msgid ""
 "Return a C :c:expr:`double` representation of the contents of *pyfloat*.  If "
 "*pyfloat* is not a Python floating point object but has a :meth:`__float__` "
@@ -82,12 +82,12 @@ msgid ""
 "This method returns ``-1.0`` upon failure, so one should call :c:func:"
 "`PyErr_Occurred` to check for errors."
 msgstr ""
-"Retorna una representación C :c:type:`double` de los contenidos de "
-"*pyfloat*. Si *pyfloat* no es un objeto de punto flotante de Python pero "
-"tiene un método :meth:`__float__`, primero se llamará a este método para "
-"convertir *pyfloat* en un flotante. Si ``__float __()`` no está definido, "
-"entonces recurre a :meth:`__index__`. Este método retorna ``-1.0`` en caso "
-"de falla, por lo que se debe llamar a :c:func:`PyErr_Occurred` para "
+"Retorna una representación de una estructura C :c:type:`double` de los "
+"contenidos de *pyfloat*. Si *pyfloat* no es un objeto de punto flotante de "
+"Python pero tiene un método :meth:`__float__`, primero se llamará a este "
+"método para convertir *pyfloat* en un flotante. Si ``__float __()`` no está "
+"definido, entonces recurre a :meth:`__index__`. Este método retorna ``-1.0`` "
+"en caso de falla, por lo que se debe llamar a :c:func:`PyErr_Occurred` para "
 "verificar si hay errores."
 
 #: ../Doc/c-api/float.rst:54
@@ -95,7 +95,6 @@ msgid "Use :meth:`__index__` if available."
 msgstr "Utilice :meth:`__index__` si está disponible."
 
 #: ../Doc/c-api/float.rst:60
-#, fuzzy
 msgid ""
 "Return a C :c:expr:`double` representation of the contents of *pyfloat*, but "
 "without error checking."
@@ -110,11 +109,10 @@ msgid ""
 "file :file:`float.h`."
 msgstr ""
 "Retorna una instancia de *structseq* que contiene información sobre la "
-"precisión, los valores mínimos y máximos de un flotante. Es una envoltura "
-"delgada alrededor del archivo de encabezado :file:`float.h`."
+"precisión, los valores mínimos y máximos de un flotante. Es un contenedor "
+"reducido alrededor del archivo de encabezado :file:`float.h`."
 
 #: ../Doc/c-api/float.rst:73
-#, fuzzy
 msgid ""
 "Return the maximum representable finite float *DBL_MAX* as C :c:expr:"
 "`double`."
@@ -123,7 +121,6 @@ msgstr ""
 "`double`."
 
 #: ../Doc/c-api/float.rst:78
-#, fuzzy
 msgid ""
 "Return the minimum normalized positive float *DBL_MIN* as C :c:expr:`double`."
 msgstr ""
@@ -132,7 +129,7 @@ msgstr ""
 
 #: ../Doc/c-api/float.rst:82
 msgid "Pack and Unpack functions"
-msgstr ""
+msgstr "Funciones de Empaquetado y Desempaquetado"
 
 #: ../Doc/c-api/float.rst:84
 msgid ""
@@ -142,6 +139,13 @@ msgid ""
 "c:expr:`double` from such a bytes string. The suffix (2, 4 or 8) specifies "
 "the number of bytes in the bytes string."
 msgstr ""
+"Las funciones empaquetar y desempaquetar proporcionan una forma eficiente e "
+"independiente de la plataforma para almacenar valores de coma flotante como "
+"cadenas de bytes. Las rutinas de empaquetar producen una cadena de bytes a "
+"partir de una cadena de bytes de C:c:expr:'double', y las de desempaquetar "
+"producen una cadena de bytes de C:c:expr:'double' a partir de dicha cadena "
+"de bytes. El sufijo (2, 4 o 8) especifica el número de bytes de la cadena de "
+"bytes."
 
 #: ../Doc/c-api/float.rst:90
 msgid ""
@@ -154,6 +158,14 @@ msgid ""
 "attempting to unpack a bytes string containing an IEEE INF or NaN will raise "
 "an exception."
 msgstr ""
+"En plataformas que parecen usar formatos IEEE 754, estas funciones actuan "
+"copiando los bits. En otras plataformas, el formato 2-byte es idéntico al "
+"formato de media precision IEEE 754 binary16, el formato de 4-byte (32 bits) "
+"es idéntico al formato de precisión simple binario IEEE 754 binary32, y el "
+"formato de 8-byte al formato de doble precisión binario IEEE 754 binary64, "
+"aunque el empaquetado de INFs y NaNs (si existen en la plataforma) no se "
+"maneja correctamente, mientras que intentar desempaquetar una cadena de "
+"bytes que contenga un IEEE INF o NaN generará una excepción."
 
 #: ../Doc/c-api/float.rst:99
 msgid ""
@@ -162,10 +174,15 @@ msgid ""
 "less precision, or smaller dynamic range, not all values can be unpacked. "
 "What happens in such cases is partly accidental (alas)."
 msgstr ""
+"En plataformas que no son IEEE con más precisión, o mayor rango dinámico, "
+"que el IEEE 754 admite, no se pueden empaquetar todos los valores; en "
+"plataformas que no son IEEE con menos precisión o con un rango dinámico más "
+"pequeño, no se pueden desempaquetar todos los valores. Lo que sucede en "
+"tales casos es en parte accidental (desafortunadamente)."
 
 #: ../Doc/c-api/float.rst:107
 msgid "Pack functions"
-msgstr ""
+msgstr "Funciones de Empaquetado"
 
 #: ../Doc/c-api/float.rst:109
 msgid ""
@@ -176,40 +193,55 @@ msgid ""
 "constant can be used to use the native endian: it is equal to ``1`` on big "
 "endian processor, or ``0`` on little endian processor."
 msgstr ""
+"Las rutinas de empaquedato escriben 2, 4 o 8 bytes, comenzando en *p*. *le* "
+"es un argumento :c:expr:`int`, distinto de cero si desea la cadena bytes con "
+"criterio little-endian (exponente al final, en ``p+1``, ``p+3``, or ``p+6`` "
+"``p+7``), cero si se necesita el criterio big-endian (exponente primero, en "
+"*p*). La constante :c:data:`PY_BIG_ENDIAN` se puede usar para usar el endian "
+"nativo: es igual a ``1`` en el procesador big endian, o ``0`` en el "
+"procesador little endian."
 
 #: ../Doc/c-api/float.rst:116
 msgid ""
 "Return value: ``0`` if all is OK, ``-1`` if error (and an exception is set, "
 "most likely :exc:`OverflowError`)."
 msgstr ""
+"Valor devuelto: ``0`` si todo está bien, ``-1`` si hay error (y se establece "
+"una excepción, probablemente :exc:`OverflowError`)."
 
 #: ../Doc/c-api/float.rst:119
 msgid "There are two problems on non-IEEE platforms:"
-msgstr ""
+msgstr "Hay dos problemas en plataformas que no son IEEE:"
 
 #: ../Doc/c-api/float.rst:121
 msgid "What this does is undefined if *x* is a NaN or infinity."
-msgstr ""
+msgstr "Lo que esto hace es indefinido si *x* es un NaN o infinito."
 
 #: ../Doc/c-api/float.rst:122
 msgid "``-0.0`` and ``+0.0`` produce the same bytes string."
-msgstr ""
+msgstr "``-0.0`` and ``+0.0`` produce la misma cadena de bytes."
 
 #: ../Doc/c-api/float.rst:126
 msgid "Pack a C double as the IEEE 754 binary16 half-precision format."
 msgstr ""
+"Empaqueta una estructura C:c:expr:'double' como el formato de media "
+"precision IEEE 754 binario16."
 
 #: ../Doc/c-api/float.rst:130
 msgid "Pack a C double as the IEEE 754 binary32 single precision format."
 msgstr ""
+"Empaqueta una estructura C:c:expr:'double' como el formato de precisión "
+"única IEEE 754 binario32."
 
 #: ../Doc/c-api/float.rst:134
 msgid "Pack a C double as the IEEE 754 binary64 double precision format."
 msgstr ""
+"Empaqueta una estructure C:c:expr:'double' como el formato de doble "
+"precision IEEE 754 binario64."
 
 #: ../Doc/c-api/float.rst:138
 msgid "Unpack functions"
-msgstr ""
+msgstr "Funciones de Desempaquetado"
 
 #: ../Doc/c-api/float.rst:140
 msgid ""
@@ -220,6 +252,13 @@ msgid ""
 "used to use the native endian: it is equal to ``1`` on big endian processor, "
 "or ``0`` on little endian processor."
 msgstr ""
+"Las rutinas de desempaquetado leen 2, 4 o 8 bytes, comenzando en *p*. *le* "
+"es un argumento :c:expr:`int` , distinto de cero si la cadena bytes usa el "
+"criterio little-endian (exponente al final, en ``p+1``, ``p+3`` or ``p+6`` "
+"and ``p+7``), cero si usa el criterio big-endian (exponente primero, en "
+"*p*). La constante :c:data:`PY_BIG_ENDIAN` se puede usar para usar el "
+"endian: es igual a `1`` en el procesador big endian, o ``0`` en el "
+"procesador little endian."
 
 #: ../Doc/c-api/float.rst:147
 msgid ""
@@ -227,21 +266,33 @@ msgid ""
 "`PyErr_Occurred` is true (and an exception is set, most likely :exc:"
 "`OverflowError`)."
 msgstr ""
+"Valor devuelto: Doble desempaquedado. Si hay error, ``-1.0`` y :c:func:"
+"`PyErr_Occurred` es verdadero (y se establece una excepción, probablemente :"
+"exc:`OverflowError`)."
 
 #: ../Doc/c-api/float.rst:151
 msgid ""
 "Note that on a non-IEEE platform this will refuse to unpack a bytes string "
 "that represents a NaN or infinity."
 msgstr ""
+"Hay que tener en cuenta que en una plataforma que no sea IEEE, esto se "
+"negará el desempaquetado de una cadena de bytes que representa un NaN o "
+"infinito."
 
 #: ../Doc/c-api/float.rst:156
 msgid "Unpack the IEEE 754 binary16 half-precision format as a C double."
 msgstr ""
+"Desempaqueta el formato de media precisión IEEE 754 binario16 como C:c:"
+"expr:'double'."
 
 #: ../Doc/c-api/float.rst:160
 msgid "Unpack the IEEE 754 binary32 single precision format as a C double."
 msgstr ""
+"Desempaqueta el formato de precisión única IEEE 754 binario32 como C:c:"
+"expr:'double'."
 
 #: ../Doc/c-api/float.rst:164
 msgid "Unpack the IEEE 754 binary64 double precision format as a C double."
 msgstr ""
+"Desempaqueta el formato de doble precisión IEEE 754 binario64 como C:c:"
+"expr:'double'."
