--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -403,7 +403,7 @@ msgid ""
 "Print a short description of Python-specific environment variables and exit."
 msgstr ""
 "Imprima una breve descripción de las variables de entorno específicas de "
-"Phyton ysalga."
+"Python y salga."
 
 #: ../Doc/using/cmdline.rst:207
 msgid ""
