--- a/tutorial/classes.po
+++ b/tutorial/classes.po
@@ -412,9 +412,9 @@ msgid ""
 "assignment changed the module-level binding."
 msgstr ""
 "Notá como la asignación *local* (que es el comportamiento normal) no cambió "
-"la vinculación de *spam* de *scope_test*.  La asignación :keyword:"
-"`nonlocal` cambió la vinculación de *spam* de *scope_test*, y la "
-"asignación :keyword:`global` cambió la vinculación a nivel de módulo."
+"la vinculación de *spam* de *scope_test*.  La asignación :keyword:`nonlocal` "
+"cambió la vinculación de *spam* de *scope_test*, y la asignación :keyword:"
+"`global` cambió la vinculación a nivel de módulo."
 
 #: ../Doc/tutorial/classes.rst:205
 msgid ""
@@ -535,12 +535,12 @@ msgid ""
 "assignment. :attr:`__doc__` is also a valid attribute, returning the "
 "docstring belonging to the class: ``\"A simple example class\"``."
 msgstr ""
-"entonces ``MyClass.i`` y ``MyClass.f`` son referencias de atributos "
-"válidas, que retornan un entero y un objeto función respectivamente.  Los "
-"atributos de clase también pueden ser asignados, o sea que podés cambiar el "
-"valor de ``MyClass.i`` mediante asignación.  :attr:`__doc__` también es un "
-"atributo válido, que retorna la documentación asociada a la clase: "
-"``\"A simple example class\"``."
+"entonces ``MyClass.i`` y ``MyClass.f`` son referencias de atributos válidas, "
+"que retornan un entero y un objeto función respectivamente.  Los atributos "
+"de clase también pueden ser asignados, o sea que podés cambiar el valor de "
+"``MyClass.i`` mediante asignación.  :attr:`__doc__` también es un atributo "
+"válido, que retorna la documentación asociada a la clase: ``\"A simple "
+"example class\"``."
 
 #: ../Doc/tutorial/classes.rst:282
 msgid ""
@@ -933,10 +933,10 @@ msgid ""
 "expressions are also allowed.  This can be useful, for example, when the "
 "base class is defined in another module::"
 msgstr ""
-"El nombre :class:`BaseClassName` debe estar definido en un ámbito que contenga a "
-"la definición de la clase derivada.  En el lugar del nombre de la clase base "
-"se permiten otras expresiones arbitrarias.  Esto puede ser útil, por "
-"ejemplo, cuando la clase base está definida en otro módulo::"
+"El nombre :class:`BaseClassName` debe estar definido en un ámbito que "
+"contenga a la definición de la clase derivada.  En el lugar del nombre de la "
+"clase base se permiten otras expresiones arbitrarias.  Esto puede ser útil, "
+"por ejemplo, cuando la clase base está definida en otro módulo::"
 
 #: ../Doc/tutorial/classes.rst:591
 msgid ""
@@ -963,10 +963,11 @@ msgid ""
 "method reference is valid if this yields a function object."
 msgstr ""
 "No hay nada en especial en la instanciación de clases derivadas: "
-"``DerivedClassName()`` crea una nueva instancia de la clase.  Las referencias a "
-"métodos se resuelven de la siguiente manera: se busca el atributo de clase "
-"correspondiente, descendiendo por la cadena de clases base si es necesario, "
-"y la referencia al método es válida si se entrega un objeto función."
+"``DerivedClassName()`` crea una nueva instancia de la clase.  Las "
+"referencias a métodos se resuelven de la siguiente manera: se busca el "
+"atributo de clase correspondiente, descendiendo por la cadena de clases base "
+"si es necesario, y la referencia al método es válida si se entrega un objeto "
+"función."
 
 #: ../Doc/tutorial/classes.rst:603
 msgid ""
@@ -995,10 +996,10 @@ msgstr ""
 "Un método redefinido en una clase derivada puede de hecho querer extender en "
 "vez de simplemente reemplazar al método de la clase base con el mismo "
 "nombre. Hay una manera simple de llamar al método de la clase base "
-"directamente: simplemente llamás a ``BaseClassName.methodname(self, arguments)``.  "
-"En ocasiones esto es útil para los clientes también.  (Observá que esto sólo "
-"funciona si la clase base es accesible como ``BaseClassName`` en el ámbito "
-"global)."
+"directamente: simplemente llamás a ``BaseClassName.methodname(self, "
+"arguments)``.  En ocasiones esto es útil para los clientes también.  "
+"(Observá que esto sólo funciona si la clase base es accesible como "
+"``BaseClassName`` en el ámbito global)."
 
 #: ../Doc/tutorial/classes.rst:616
 msgid "Python has two built-in functions that work with inheritance:"
@@ -1052,8 +1053,8 @@ msgstr ""
 "la búsqueda de los atributos heredados de clases padres como primero en "
 "profundidad, de izquierda a derecha, sin repetir la misma clase cuando está "
 "dos veces en la jerarquía.  Por lo tanto, si un atributo no se encuentra en :"
-"class:`DerivedClassName`, se busca en :class:`Base1`, luego (recursivamente) en "
-"las clases base de :class:`Base1`, y sólo si no se encuentra allí se lo "
+"class:`DerivedClassName`, se busca en :class:`Base1`, luego (recursivamente) "
+"en las clases base de :class:`Base1`, y sólo si no se encuentra allí se lo "
 "busca en :class:`Base2`, y así sucesivamente."
 
 #: ../Doc/tutorial/classes.rst:651
