--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -454,10 +454,10 @@ msgid ""
 "``f.close()`` **might** result in the arguments of ``f.write()`` not being "
 "completely written to the disk, even if the program exits successfully."
 msgstr ""
-"Llamar a ``f.write()`` sin usar la palabra clave :keyword:`!with` o sin"
-"llamar a ``f.close()`` **podría** dar como resultado que los argumentos de ``f."
-"write()`` no se escriban completamente en disco, incluso si el programa se "
-"termina correctamente."
+"Llamar a ``f.write()`` sin usar la palabra clave :keyword:`!with` o "
+"sinllamar a ``f.close()`` **podría** dar como resultado que los argumentos "
+"de ``f.write()`` no se escriban completamente en disco, incluso si el "
+"programa se termina correctamente."
 
 #: ../Doc/tutorial/inputoutput.rst:357
 msgid ""
