--- a/tutorial/whatnow.po
+++ b/tutorial/whatnow.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2020-05-09 14:19+0200\n"
-"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-12-02 09:03+0100\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/tutorial/whatnow.rst:5
 msgid "What Now?"
@@ -48,7 +49,6 @@ msgid ":ref:`library-index`:"
 msgstr ":ref:`library-index`:"
 
 #: ../Doc/tutorial/whatnow.rst:16
-#, fuzzy
 msgid ""
 "You should browse through this manual, which gives complete (though terse) "
 "reference material about types, functions, and the modules in the standard "
@@ -61,7 +61,7 @@ msgstr ""
 "Deberías navegar a través de este manual, que da una completa (aunque breve) "
 "referencia sobre los tipos, funciones y módulos en la librería estándar. La "
 "distribución estándar de Python incluye *mucho* más código adicional. Hay "
-"módulos para leer buzones Unix,  recuperar documentos vía HTTP,  generar "
+"módulos para leer buzones Unix, recuperar documentos vía HTTP, generar "
 "números aleatorios, analizar opciones de línea de comandos, escribir "
 "programas CGI, comprimir datos y muchas más tareas. Echar una ojeada a la "
 "Librería de Referencia te dará una idea de lo que está disponible."
@@ -125,7 +125,6 @@ msgstr ""
 "Python Cookbook (O’Reilly & Associates, ISBN 0-596-00797-3.)"
 
 #: ../Doc/tutorial/whatnow.rst:48
-#, fuzzy
 msgid ""
 "https://pyvideo.org collects links to Python-related videos from conferences "
 "and user-group meetings."
