--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -542,8 +542,8 @@ msgid ""
 "the user from injecting malicious code."
 msgstr ""
 "En modo aislado :data:`sys.path` no contiene ni el directorio del script ni "
-"el directorio site-packages del usuario. Todas las :envvar: de entorno:"
-"`PYTHON*` variables de entorno también se ignoran. Se pueden imponer otras "
+"el directorio site-packages del usuario. Todas las variables de entorno :envvar:"
+"`PYTHON*`  también se ignoran. Se pueden imponer otras "
 "restricciones para evitar que el usuario inyecte código malicioso."
 
 #: ../Doc/using/cmdline.rst:312
