--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -145,13 +145,13 @@ msgstr ""
 
 #: ../Doc/using/cmdline.rst:68
 msgid ""
-"If this option is given, the first element of :data:`sys.argv` will be ``\"-c"
-"\"`` and the current directory will be added to the start of :data:`sys."
+"If this option is given, the first element of :data:`sys.argv` will be ``\"-"
+"c\"`` and the current directory will be added to the start of :data:`sys."
 "path` (allowing modules in that directory to be imported as top level "
 "modules)."
 msgstr ""
-"Si se proporciona esta opción, el primer elemento de :data:`sys.argv` será ``"
-"\"-c\"`` y el directorio actual se agregará al inicio de :data:`sys.path` "
+"Si se proporciona esta opción, el primer elemento de :data:`sys.argv` será "
+"``\"-c\"`` y el directorio actual se agregará al inicio de :data:`sys.path` "
 "(permitiendo que los módulos de ese directorio se importen como módulos de "
 "nivel superior)."
 
@@ -419,7 +419,8 @@ msgstr "Imprima información completa de uso y salga."
 #: ../Doc/using/cmdline.rst:221
 msgid "Print the Python version number and exit.  Example output could be:"
 msgstr ""
-"Imprima el número de versión de Python y salga.  Ejemplo de salida podría ser:"
+"Imprima el número de versión de Python y salga.  Ejemplo de salida podría "
+"ser:"
 
 #: ../Doc/using/cmdline.rst:227
 msgid "When given twice, print more information about the build, like:"
@@ -542,9 +543,9 @@ msgid ""
 "the user from injecting malicious code."
 msgstr ""
 "En modo aislado :data:`sys.path` no contiene ni el directorio del script ni "
-"el directorio site-packages del usuario. Todas las variables de entorno :envvar:"
-"`PYTHON*`  también se ignoran. Se pueden imponer otras "
-"restricciones para evitar que el usuario inyecte código malicioso."
+"el directorio site-packages del usuario. Todas las variables de entorno :"
+"envvar:`PYTHON*`  también se ignoran. Se pueden imponer otras restricciones "
+"para evitar que el usuario inyecte código malicioso."
 
 #: ../Doc/using/cmdline.rst:312
 msgid ""
@@ -967,12 +968,12 @@ msgstr ""
 #: ../Doc/using/cmdline.rst:531
 msgid ""
 "``-X frozen_modules`` determines whether or not frozen modules are ignored "
-"by the import machinery.  A value of \"on\" means they get imported and \"off"
-"\" means they are ignored.  The default is \"on\" if this is an installed "
-"Python (the normal case).  If it's under development (running from the "
-"source tree) then the default is \"off\". Note that the \"importlib_bootstrap"
-"\" and \"importlib_bootstrap_external\" frozen modules are always used, even "
-"if this flag is set to \"off\"."
+"by the import machinery.  A value of \"on\" means they get imported and "
+"\"off\" means they are ignored.  The default is \"on\" if this is an "
+"installed Python (the normal case).  If it's under development (running from "
+"the source tree) then the default is \"off\". Note that the "
+"\"importlib_bootstrap\" and \"importlib_bootstrap_external\" frozen modules "
+"are always used, even if this flag is set to \"off\"."
 msgstr ""
 
 #: ../Doc/using/cmdline.rst:539
