traduccion using/cmdline.po (#2236)
Mil disculpas por la demora 🙏🏽

Co-authored-by: rtobar <rtobarc@gmail.com>
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>
Co-authored-by: Cristián Maureira-Fredes <Cristian.Maureira-Fredes@qt.io>

--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-10-18 21:54-0300\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"Last-Translator: Andrea Griffiths <andreagriffiths11@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -402,15 +402,19 @@ msgstr ""
 msgid ""
 "Print a short description of Python-specific environment variables and exit."
 msgstr ""
+"Imprima una breve descripción de las variables de entorno específicas de "
+"Python y salga."
 
 #: ../Doc/using/cmdline.rst:207
 msgid ""
 "Print a description of implementation-specific :option:`-X` options and exit."
 msgstr ""
+"Imprima una descripción de las opciones :option:`-X` específicas de la "
+"implementación y salga."
 
 #: ../Doc/using/cmdline.rst:214
 msgid "Print complete usage information and exit."
-msgstr ""
+msgstr "Imprima información completa de uso y salga."
 
 #: ../Doc/using/cmdline.rst:221
 msgid "Print the Python version number and exit.  Example output could be:"
@@ -500,7 +504,7 @@ msgstr ""
 
 #: ../Doc/using/cmdline.rst:283
 msgid "See also the :option:`-P` and :option:`-I` (isolated) options."
-msgstr ""
+msgstr "Véase también las opciones :option:`-P` e :option:`-I` (aisladas)."
 
 #: ../Doc/using/cmdline.rst:288
 msgid ""
@@ -528,6 +532,8 @@ msgid ""
 "Run Python in isolated mode. This also implies :option:`-E`, :option:`-P` "
 "and :option:`-s` options."
 msgstr ""
+"Ejecute Python en modo aislado. Esto también implica las opciones :option:`-"
+"E`, :option:`-P` y :option:`-s`."
 
 #: ../Doc/using/cmdline.rst:302
 msgid ""
@@ -536,6 +542,10 @@ msgid ""
 "variables are ignored, too. Further restrictions may be imposed to prevent "
 "the user from injecting malicious code."
 msgstr ""
+"En modo aislado :data:`sys.path` no contiene ni el directorio del script ni "
+"el directorio site-packages del usuario. Todas las variables de entorno :"
+"envvar:`PYTHON*`  también se ignoran. Se pueden imponer otras restricciones "
+"para evitar que el usuario inyecte código malicioso."
 
 #: ../Doc/using/cmdline.rst:312
 msgid ""
