--- a/faq/windows.po
+++ b/faq/windows.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-11-21 15:09-0600\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"Last-Translator: Ruben Espinosa Perez <danna860@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -45,7 +45,6 @@ msgstr ""
 "orientación."
 
 #: ../Doc/faq/windows.rst:28
-#, fuzzy
 msgid ""
 "Unless you use some sort of integrated development environment, you will end "
 "up *typing* Windows commands into what is referred to as a \"Command prompt "
@@ -290,7 +289,7 @@ msgstr ""
 
 #: ../Doc/faq/windows.rst:170
 msgid ""
-"Do _not_ build Python into your .exe file directly.  On Windows, Python must "
+"Do _not_ build Python into your .exe file directly. On Windows, Python must "
 "be a DLL to handle importing modules that are themselves DLL's.  (This is "
 "the first key undocumented fact.)  Instead, link to :file:`python{NN}.dll`; "
 "it is typically installed in ``C:\\Windows\\System``.  *NN* is the Python "
@@ -512,7 +511,7 @@ msgstr ""
 
 #: ../Doc/faq/windows.rst:281
 msgid "How do I solve the missing api-ms-win-crt-runtime-l1-1-0.dll error?"
-msgstr ""
+msgstr "¿Cómo resuelvo el error de api-ms-win-crt-runtime-l1-1-0.dll no encontrado?"
 
 #: ../Doc/faq/windows.rst:283
 msgid ""
@@ -522,10 +521,10 @@ msgid ""
 "issue, visit the `Microsoft support page <https://support.microsoft.com/en-"
 "us/help/3118401/>`_ for guidance on manually installing the C Runtime update."
 msgstr ""
+"Esto puede ocurrir en Python 3.5 y posteriores usando Windows 8.1 o anteriores "
+"sin que todas las actualizaciones hayan sido instaladas. Primero asegúrese que su "
+"sistema operativo sea compatible y esté actualizado, y si eso no resuelve el "
+"problema, visite la ` Página de soporte de Microsoft <https://support.microsoft.com/en-"
+"us/help/3118401/>`_ para obtener orientación sobre como instalar manualmente la "
+"actualización de C Runtime "
 
-#~ msgid ""
-#~ "Borland note: convert :file:`python{NN}.lib` to OMF format using Coff2Omf."
-#~ "exe first."
-#~ msgstr ""
-#~ "Nota *Borland*: convierta el archivo :file:`python{NN}.lib` al formato "
-#~ "OMF usando Coff2Omf.exe primero."
