--- a/c-api/float.po
+++ b/c-api/float.po
@@ -158,7 +158,7 @@ msgid ""
 "attempting to unpack a bytes string containing an IEEE INF or NaN will raise "
 "an exception."
 msgstr ""
-"En plataformas que parecen usar formatos IEEE 754, estas funciones actuan "
+"En plataformas que parecen usar formatos IEEE 754, estas funciones actúan "
 "copiando los bits. En otras plataformas, el formato 2-byte es idéntico al "
 "formato de media precision IEEE 754 binary16, el formato de 4-byte (32 bits) "
 "es idéntico al formato de precisión simple binario IEEE 754 binary32, y el "
