--- a/c-api/float.po
+++ b/c-api/float.po
@@ -193,7 +193,7 @@ msgid ""
 "constant can be used to use the native endian: it is equal to ``1`` on big "
 "endian processor, or ``0`` on little endian processor."
 msgstr ""
-"Las rutinas de empaquedato escriben 2, 4 o 8 bytes, comenzando en *p*. *le* "
+"Las rutinas de empaquetado escriben 2, 4 o 8 bytes, comenzando en *p*. *le* "
 "es un argumento :c:expr:`int`, distinto de cero si desea la cadena bytes con "
 "criterio little-endian (exponente al final, en ``p+1``, ``p+3``, or ``p+6`` "
 "``p+7``), cero si se necesita el criterio big-endian (exponente primero, en "
