--- a/c-api/float.po
+++ b/c-api/float.po
@@ -266,7 +266,7 @@ msgid ""
 "`PyErr_Occurred` is true (and an exception is set, most likely :exc:"
 "`OverflowError`)."
 msgstr ""
-"Valor devuelto: Doble desempaquedado. Si hay error, ``-1.0`` y :c:func:"
+"Valor retornado: Doble desempaquetado. Si hay error, ``-1.0`` y :c:func:"
 "`PyErr_Occurred` es verdadero (y se establece una excepción, probablemente :"
 "exc:`OverflowError`)."
 
