--- a/c-api/float.po
+++ b/c-api/float.po
@@ -206,7 +206,7 @@ msgid ""
 "Return value: ``0`` if all is OK, ``-1`` if error (and an exception is set, "
 "most likely :exc:`OverflowError`)."
 msgstr ""
-"Valor devuelto: ``0`` si todo está bien, ``-1`` si hay error (y se establece "
+"Valor retornado: ``0`` si todo está bien, ``-1`` si hay error (y se establece "
 "una excepción, probablemente :exc:`OverflowError`)."
 
 #: ../Doc/c-api/float.rst:119
