fix sphinx commands

--- a/c-api/float.po
+++ b/c-api/float.po
@@ -82,7 +82,7 @@ msgid ""
 "This method returns ``-1.0`` upon failure, so one should call :c:func:"
 "`PyErr_Occurred` to check for errors."
 msgstr ""
-"Retorna una representación de una estructura C :c:type:`double` de los "
+"Retorna una representación de una estructura C :c:expr:`double` de los "
 "contenidos de *pyfloat*. Si *pyfloat* no es un objeto de punto flotante de "
 "Python pero tiene un método :meth:`__float__`, primero se llamará a este "
 "método para convertir *pyfloat* en un flotante. Si ``__float __()`` no está "
@@ -99,7 +99,7 @@ msgid ""
 "Return a C :c:expr:`double` representation of the contents of *pyfloat*, but "
 "without error checking."
 msgstr ""
-"Retorna una representación C :c:type:`double` de los contenidos de "
+"Retorna una representación C :c:expr:`double` de los contenidos de "
 "*pyfloat*, pero sin verificación de errores."
 
 #: ../Doc/c-api/float.rst:66
@@ -117,14 +117,14 @@ msgid ""
 "Return the maximum representable finite float *DBL_MAX* as C :c:expr:"
 "`double`."
 msgstr ""
-"Retorna el máximo flotante finito representable *DBL_MAX* como C :c:type:"
+"Retorna el máximo flotante finito representable *DBL_MAX* como C :c:expr:"
 "`double`."
 
 #: ../Doc/c-api/float.rst:78
 msgid ""
 "Return the minimum normalized positive float *DBL_MIN* as C :c:expr:`double`."
 msgstr ""
-"Retorna el flotante positivo normalizado mínimo *DBL_MIN* como C :c:type:"
+"Retorna el flotante positivo normalizado mínimo *DBL_MIN* como C :c:expr:"
 "`double`."
 
 #: ../Doc/c-api/float.rst:82
