Corrección de titlecase en c-api

--- a/c-api/bool.po
+++ b/c-api/bool.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/bool.rst:6
 msgid "Boolean Objects"
-msgstr "Objetos Booleanos"
+msgstr "Objetos booleanos"
 
 #: ../Doc/c-api/bool.rst:8
 msgid ""
