--- a/c-api/buffer.po
+++ b/c-api/buffer.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/buffer.rst:11
 msgid "Buffer Protocol"
-msgstr "Protocolo Búfer"
+msgstr "Protocolo búfer"
 
 #: ../Doc/c-api/buffer.rst:18
 msgid ""
