--- a/c-api/call.po
+++ b/c-api/call.po
@@ -341,7 +341,7 @@ msgstr "API para invocar objetos"
 #: ../Doc/c-api/call.rst:179
 msgid ""
 "Various functions are available for calling a Python object. Each converts "
-"its arguments to a convention supported by the called object – either "
+"its arguments to a convention supported by the called object - either "
 "*tp_call* or vectorcall. In order to do as little conversion as possible, "
 "pick one that best fits the format of data you have available."
 msgstr ""
