--- a/c-api/cell.po
+++ b/c-api/cell.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/cell.rst:6
 msgid "Cell Objects"
-msgstr "Objetos Celda"
+msgstr "Objetos celda"
 
 #: ../Doc/c-api/cell.rst:8
 msgid ""
