--- a/c-api/code.po
+++ b/c-api/code.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/code.rst:8
 msgid "Code Objects"
-msgstr "Objetos Código"
+msgstr "Objetos código"
 
 #: ../Doc/c-api/code.rst:12
 msgid ""
