--- a/c-api/dict.po
+++ b/c-api/dict.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/c-api/dict.rst:6
 msgid "Dictionary Objects"
-msgstr "Objetos Diccionarios"
+msgstr "Objetos diccionario"
 
 #: ../Doc/c-api/dict.rst:13
 msgid ""
