--- a/c-api/frame.po
+++ b/c-api/frame.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../Doc/c-api/frame.rst:4
 msgid "Frame Objects"
-msgstr "Objetos Frame"
+msgstr "Objetos frame"
 
 #: ../Doc/c-api/frame.rst:8
 msgid "The C structure of the objects used to describe frame objects."
