--- a/c-api/gen.po
+++ b/c-api/gen.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/gen.rst:6
 msgid "Generator Objects"
-msgstr "Objetos Generadores"
+msgstr "Objetos generadores"
 
 #: ../Doc/c-api/gen.rst:8
 msgid ""
