--- a/c-api/import.po
+++ b/c-api/import.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/import.rst:6
 msgid "Importing Modules"
-msgstr "Importando Módulos"
+msgstr "Importando módulos"
 
 #: ../Doc/c-api/import.rst:16
 msgid ""
