--- a/c-api/init.po
+++ b/c-api/init.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:8
 msgid "Initialization, Finalization, and Threads"
-msgstr "Inicialización, Finalización e Hilos"
+msgstr "Inicialización, finalización e hilos"
 
 #: ../Doc/c-api/init.rst:10
 msgid "See also :ref:`Python Initialization Configuration <init-config>`."
