--- a/c-api/long.po
+++ b/c-api/long.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/c-api/long.rst:6
 msgid "Integer Objects"
-msgstr "Objetos Enteros"
+msgstr "Objetos enteros"
 
 #: ../Doc/c-api/long.rst:11
 msgid ""
