--- a/c-api/module.po
+++ b/c-api/module.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/c-api/module.rst:6
 msgid "Module Objects"
-msgstr "Objetos Modulo"
+msgstr "Objetos módulo"
 
 #: ../Doc/c-api/module.rst:15
 msgid ""
