--- a/c-api/set.po
+++ b/c-api/set.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/set.rst:6
 msgid "Set Objects"
-msgstr "Objetos Conjunto"
+msgstr "Objetos conjunto"
 
 #: ../Doc/c-api/set.rst:15
 msgid ""
