--- a/c-api/slice.po
+++ b/c-api/slice.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/slice.rst:6
 msgid "Slice Objects"
-msgstr "Objeto rebanada (*slice*)"
+msgstr "Objetos rebanada (*slice*)"
 
 #: ../Doc/c-api/slice.rst:11
 msgid ""
@@ -184,7 +184,7 @@ msgstr ""
 
 #: ../Doc/c-api/slice.rst:116
 msgid "Ellipsis Object"
-msgstr "Objeto Elipsis"
+msgstr "Objeto elipsis"
 
 #: ../Doc/c-api/slice.rst:121
 msgid ""
