--- a/c-api/stable.po
+++ b/c-api/stable.po
@@ -219,7 +219,7 @@ msgid ""
 "a Limited API extension with a version-specific ABI. This can improve "
 "performance for that Python version, but will limit compatibility. Compiling "
 "with ``Py_LIMITED_API`` will then yield an extension that can be distributed "
-"where a version-specific one is not available – for example, for prereleases "
+"where a version-specific one is not available - for example, for prereleases "
 "of an upcoming Python version."
 msgstr ""
 "Al dejar fuera la definición de ``Py_LIMITED_API``, es posible compilar una "
