--- a/c-api/type.po
+++ b/c-api/type.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/c-api/type.rst:6
 msgid "Type Objects"
-msgstr "Objetos Tipos"
+msgstr "Objetos tipo"
 
 #: ../Doc/c-api/type.rst:13
 msgid "The C structure of the objects used to describe built-in types."
