--- a/c-api/typeobj.po
+++ b/c-api/typeobj.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/typeobj.rst:6
 msgid "Type Objects"
-msgstr "Objetos Tipo"
+msgstr "Objetos tipo"
 
 #: ../Doc/c-api/typeobj.rst:8
 #, fuzzy
