--- a/c-api/bytes.po
+++ b/c-api/bytes.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/c-api/bytes.rst:6
 msgid "Bytes Objects"
-msgstr "Objetos Bytes"
+msgstr "Objetos bytes"
 
 #: ../Doc/c-api/bytes.rst:8
 msgid ""
