--- a/c-api/tuple.po
+++ b/c-api/tuple.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/c-api/tuple.rst:6
 msgid "Tuple Objects"
-msgstr "Objetos Tuplas"
+msgstr "Objetos tupla"
 
 #: ../Doc/c-api/tuple.rst:13
 msgid "This subtype of :c:type:`PyObject` represents a Python tuple object."
