--- a/extending/building.po
+++ b/extending/building.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/extending/building.rst:7
 msgid "Building C and C++ Extensions"
-msgstr "Construyendo Extensiones C y C++"
+msgstr "Construyendo extensiones C y C++"
 
 #: ../Doc/extending/building.rst:9
 msgid ""
@@ -93,7 +93,7 @@ msgstr ""
 
 #: ../Doc/extending/building.rst:49
 msgid "Building C and C++ Extensions with distutils"
-msgstr "Construyendo Extensiones C y C++ con distutils"
+msgstr "Construyendo extensiones C y C++ con distutils"
 
 #: ../Doc/extending/building.rst:53
 msgid ""
