--- a/extending/embedding.po
+++ b/extending/embedding.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/extending/embedding.rst:8
 msgid "Embedding Python in Another Application"
-msgstr "Incrustando Python en Otra Aplicación"
+msgstr "Incrustando Python en otra aplicación"
 
 #: ../Doc/extending/embedding.rst:10
 msgid ""
@@ -328,7 +328,7 @@ msgstr ""
 
 #: ../Doc/extending/embedding.rst:207
 msgid "Extending Embedded Python"
-msgstr "Extendiendo Python Incrustado"
+msgstr "Extendiendo Python incrustado"
 
 #: ../Doc/extending/embedding.rst:209
 msgid ""
