--- a/extending/newtypes.po
+++ b/extending/newtypes.po
@@ -198,7 +198,7 @@ msgstr ":pep:`442` explica el nuevo esquema de finalización."
 
 #: ../Doc/extending/newtypes.rst:155
 msgid "Object Presentation"
-msgstr "Presentación de Objetos"
+msgstr "Presentación de objetos"
 
 #: ../Doc/extending/newtypes.rst:157
 msgid ""
