--- a/extending/newtypes_tutorial.po
+++ b/extending/newtypes_tutorial.po
@@ -42,7 +42,7 @@ msgstr ""
 
 #: ../Doc/extending/newtypes_tutorial.rst:24
 msgid "The Basics"
-msgstr "Lo Básico"
+msgstr "Lo básico"
 
 #: ../Doc/extending/newtypes_tutorial.rst:26
 #, fuzzy
