Correcciones "howto" y "faq"

--- a/faq/general.po
+++ b/faq/general.po
@@ -32,7 +32,7 @@ msgstr "Contenido"
 
 #: ../Doc/faq/general.rst:13
 msgid "General Information"
-msgstr "Información General"
+msgstr "Información general"
 
 #: ../Doc/faq/general.rst:16
 msgid "What is Python?"
@@ -141,7 +141,7 @@ msgstr ""
 
 #: ../Doc/faq/general.rst:66
 msgid "Why was Python created in the first place?"
-msgstr "¿Por qué motivos se creó Python?"
+msgstr "¿Por qué se creó Python en primer lugar?"
 
 #: ../Doc/faq/general.rst:68
 msgid ""
