--- a/howto/argparse.po
+++ b/howto/argparse.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/howto/argparse.rst:3
 msgid "Argparse Tutorial"
-msgstr "Tutorial de *Argparse*"
+msgstr "Tutorial de *argparse*"
 
 #: ../Doc/howto/argparse.rst
 msgid "author"
