--- a/howto/curses.po
+++ b/howto/curses.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/howto/curses.rst:5
 msgid "Curses Programming with Python"
-msgstr "Programación de Curses con Python"
+msgstr "Programación de curses con Python"
 
 #: ../Doc/howto/curses.rst
 msgid "Author"
