--- a/howto/logging.po
+++ b/howto/logging.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../Doc/howto/logging.rst:3
 msgid "Logging HOWTO"
-msgstr "HOWTO Hacer Registros (*Logging*)"
+msgstr "HOWTO hacer registros (*Logging*)"
 
 #: ../Doc/howto/logging.rst
 msgid "Author"
@@ -35,7 +35,7 @@ msgstr "Vinay Sajip <vinay_sajip at red-dove dot com>"
 
 #: ../Doc/howto/logging.rst:12
 msgid "Basic Logging Tutorial"
-msgstr "Tutorial Básico de *Logging*"
+msgstr "Tutorial básico de *logging*"
 
 #: ../Doc/howto/logging.rst:14
 msgid ""
@@ -223,7 +223,7 @@ msgstr ""
 msgid "``CRITICAL``"
 msgstr "``CRITICAL``"
 
-#: ../Doc/howto/logging.rst:85
+#: ../Doc/howto/logging.rst:851
 msgid ""
 "A serious error, indicating that the program itself may be unable to "
 "continue running."
