--- a/howto/unicode.po
+++ b/howto/unicode.po
@@ -773,7 +773,7 @@ msgstr ""
 
 #: ../Doc/howto/unicode.rst:484
 msgid "Unicode Regular Expressions"
-msgstr "Expresiones Regulares Unicode"
+msgstr "Expresiones regulares Unicode"
 
 #: ../Doc/howto/unicode.rst:486
 msgid ""
