--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -397,7 +397,7 @@ msgstr ""
 
 #: ../Doc/howto/urllib2.rst:248
 msgid "Error Codes"
-msgstr "Códigos de Error"
+msgstr "Códigos de error"
 
 #: ../Doc/howto/urllib2.rst:250
 msgid ""
@@ -589,7 +589,7 @@ msgstr ""
 
 #: ../Doc/howto/urllib2.rst:455
 msgid "Basic Authentication"
-msgstr "Autenticación Básica"
+msgstr "Autenticación básica"
 
 #: ../Doc/howto/urllib2.rst:457
 msgid ""
@@ -745,7 +745,7 @@ msgstr ""
 
 #: ../Doc/howto/urllib2.rst:558
 msgid "Sockets and Layers"
-msgstr "Sockets y Capas"
+msgstr "Sockets y capas"
 
 #: ../Doc/howto/urllib2.rst:560
 msgid ""
