--- a/howto/regex.po
+++ b/howto/regex.po
@@ -140,7 +140,7 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:63
 msgid "Matching Characters"
-msgstr "Coincidencia de Caracteres (*Matching Characters*)"
+msgstr "Coincidencia de caracteres (*Matching Characters*)"
 
 #: ../Doc/howto/regex.rst:65
 msgid ""
@@ -1138,7 +1138,7 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:523
 msgid "Compilation Flags"
-msgstr "Los Flags de compilación"
+msgstr "Los flags de compilación"
 
 #: ../Doc/howto/regex.rst:525
 msgid ""
@@ -1934,7 +1934,7 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:979
 msgid "Lookahead Assertions"
-msgstr "Aserciones Anticipadas"
+msgstr "Aserciones anticipadas"
 
 #: ../Doc/howto/regex.rst:981
 msgid ""
@@ -2234,7 +2234,7 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:1133
 msgid "Search and Replace"
-msgstr "Búsqueda y Remplazo"
+msgstr "Búsqueda y reemplazo"
 
 #: ../Doc/howto/regex.rst:1135
 msgid ""
@@ -2255,7 +2255,7 @@ msgid ""
 "pattern isn't found, *string* is returned unchanged."
 msgstr ""
 "Retorna la cadena de caracteres obtenida al reemplazar las apariciones no "
-"superpuestas del extremo izquierdo de la RE en *string* por el remplazo "
+"superpuestas del extremo izquierdo de la RE en *string* por el reemplazo "
 "*replacement*. Si no se encuentra el patrón, el *string* se retorna sin "
 "cambios."
 
