--- a/distutils/commandref.po
+++ b/distutils/commandref.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/distutils/commandref.rst:5
 msgid "Command Reference"
-msgstr "Referencia de Instrucciones"
+msgstr "Referencia de comandos"
 
 #: ../Doc/distutils/_setuptools_disclaimer.rst:3
 msgid ""
