--- a/distutils/examples.po
+++ b/distutils/examples.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/distutils/examples.rst:5
 msgid "Distutils Examples"
-msgstr "Ejemplos de Distutils"
+msgstr "Ejemplos de distutils"
 
 #: ../Doc/distutils/_setuptools_disclaimer.rst:3
 msgid ""
