--- a/distutils/extending.po
+++ b/distutils/extending.po
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/distutils/extending.rst:5
 msgid "Extending Distutils"
-msgstr "Extendiendo Distutils"
+msgstr "Extendiendo distutils"
 
 #: ../Doc/distutils/_setuptools_disclaimer.rst:3
 msgid ""
